--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -184,6 +184,7 @@
     <string name="compose_message">Compose new message</string>
     <string name="send_message">Send message</string>
     <string name="enter_contact_name">Enter contact name</string>
+    <string name="enter_contact_name_or_number">Enter contact name or number</string>
     <string name="error_processing_vcard">Error processing vcard</string>
     <string name="compose_recents">Recents</string>
     <string name="compose_groups">Groups</string>
