add a fragment for private conversations, hide it from the drawer based on feature flag

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <!-- Drawer Items -->
     <string name="menu_conversations">Conversation list</string>
     <string name="menu_archived_conversations">Archived conversations</string>
+    <string name="menu_private_conversations">Private conversations</string>
     <string name="menu_schedule">Scheduled messages</string>
     <string name="menu_mute_contacts">Blacklist</string>
     <string name="menu_invite">Invite friends</string>
