set the description when there is no conversations or archived messages

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -97,6 +97,8 @@
         You can use Pulse to text from <b>any</b> device!</string>
     <string name="convo_list_try_it">Try it!</string>
     <string name="convo_list_not_now">Not now</string>
+    <string name="no_private_messages_description">Set up private conversations from their settings menu!</string>
+    <string name="no_archived_messages_description">Archive a conversation for it to show up, here!</string>
 
     <!-- Search Screen -->
     <string name="conversations">Conversations</string>
