--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -473,8 +473,8 @@
     <string name="quick_compose_favorites">Favorite contacts</string>
     <string name="quick_compose_favorites_summary">These contacts will be made available on the notification actions</string>
     <string name="quick_compose_favorites_title">Select up to 3 contacts:</string>
-    <string name="secure_private_conversations">Secure Private Conversations</string>
-    <string name="secure_private_conversations_summary">Require a PIN to access private conversations</string>
+    <string name="secure_private_conversations">Private Conversations Password</string>
+    <string name="secure_private_conversations_summary">Setting a password will require you to enter it, before viewing private conversations</string>
     <string name="use_internal_browser">Use Internal Web Browser</string>
     <string name="internal_browser_summary">Turning this off will also disable link previews within message lists</string>
     <string name="message_backup">Message Backup</string>
