--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -312,7 +312,8 @@
     <string name="mute_conversation">Mute Conversation</string>
     <string name="mute_conversation_summary">Hides notifications for this conversation</string>
     <string name="private_conversation">Private Conversation</string>
-    <string name="private_conversation_summary">Hide conversation content on notifications</string>
+    <string name="private_conversation_summary">Hide content on notifications</string>
+    <string name="private_conversation_summary_2">Hide content on notifications and move this conversation to the <i>Private Conversations</i> section</string>
     <string name="primary_color">Primary Color</string>
     <string name="primary_dark_color">Primary Color Dark</string>
     <string name="accent_color">Accent Color</string>
